--- a/src/style.css
+++ b/src/style.css
@@ -2,19 +2,29 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    color: #fff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-size: 100% 100%;
     background-position: center;
 }
 
+main > .background {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+}
+
 header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(217, 217, 217, 0.2);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -27,13 +37,18 @@ header {
         "desc desc"
         "updt updt";
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr 1fr;
-    margin-top: 2rem;
+    margin-top: 5rem;
+}
+
+#main-information > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #main-information > .location {
     grid-area: city;
-    text-align: center;
+    margin-bottom: -1rem;
 }
 
 #main-information > .icon {
@@ -42,24 +57,27 @@ header {
 
 #main-information > .temperature {
     grid-area: temp;
-    text-align: center;
+    font-size: 3rem;
 }
 
 #main-information > .description {
     grid-area: desc;
-    text-align: center;
+    margin-top: -1rem;
+    font-weight: bold;
+    margin-bottom: 0.2rem;
 }
 
 #main-information > .update-time {
     grid-area: updt;
-    text-align: center;
 }
 
 #additional-information {
+    background-color: rgba(217, 217, 217, 0.2);
     margin: 1rem;
     padding: 0.5rem 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 1rem 2rem;
 }
 
 #additional-information > div > div {
