--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     color: #fff;
+    outline: 1px solid red;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -36,7 +37,7 @@ header {
 }
 
 #title-box > svg {
-    margin-right: 0 1rem;
+    margin-right: 0 2rem;
     width: 2.5rem;
 }
 
@@ -93,6 +94,10 @@ header {
     height: 2.5rem;
 }
 
+#menu-box path {
+    fill: #d9d9d9;
+}
+
 #main-information {
     display: grid;
     grid-template-areas: 
@@ -137,7 +142,7 @@ header {
 
 #additional-information {
     background-color: rgba(217, 217, 217, 0.2);
-    margin: 1rem;
+    margin: 3rem 1rem;
     padding: 0.5rem 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -171,4 +176,41 @@ header {
 
 .max-min {
     font-size: 0.7rem;
+}
+
+#forecast-information {
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+}
+
+#forecast-container {
+    position: relative;
+    display: flex;
+}
+
+.forecast-content {
+    margin-right: 2rem;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(217, 217, 217, 0.2);
+    width: calc(15vw - 2rem);
+}
+
+#forecast-controls {
+    margin: 1rem 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+#forecast-controls > button {
+    border-radius: 1rem;
+    width: 4rem;
+    height: 2rem;
+    background-color: rgba(217, 217, 217, 0.2);
 }
