--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
     color: #fff;
-    outline: 1px solid red;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -179,14 +178,38 @@ header {
 }
 
 #forecast-information {
-    width: 75vw;
+    width: calc(75vw + 2rem);
     display: flex;
     flex-direction: column;
+    position: relative;
+}
+
+#forecast-carousel > button {
+    position: absolute;
+    top: 50%;
+    width: 2rem;
+    border: none;
+}
+
+#next {
+    right: 0;
+}
+
+#previous {
+    left: 0;
+}
+
+.forecast-slider {
+    overflow: hidden;
+    margin-left: 2rem;
+    padding: 2rem 0;
 }
 
 #forecast-container {
     position: relative;
     display: flex;
+    right: 0;
+    transition: right 1s ease-in-out;
 }
 
 .forecast-content {
@@ -209,8 +232,10 @@ header {
 }
 
 #forecast-controls > button {
+    flex-shrink: 0;
+    border: none;
     border-radius: 1rem;
-    width: 4rem;
-    height: 2rem;
+    width: 2rem;
+    height: 1rem;
     background-color: rgba(217, 217, 217, 0.2);
 }
