--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@ header {
 }
 
 #search-box {
+    margin-top: 1rem;
     grid-column: span 2;
     display: grid;
     grid-template-columns: 1fr auto;
@@ -84,6 +85,14 @@ header {
     font-weight: bold;
     border-radius: 0 1rem 1rem 0;
     cursor: pointer;
+}
+
+#error-box {
+    grid-column: span 2;
+    padding-left: 2rem;
+    width: 100%;
+    height: 1rem;
+    color: orange;
 }
 
 #main-information {
