--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,6 @@
+$default-color: rgb(217, 217, 217);
+$secondary-color: rgb(37, 37, 37);
+
 * {
     padding: 0;
     margin: 0;
@@ -9,22 +12,22 @@
 main {
     background-size: 100% 100%;
     background-position: center;
-}
 
-main > .background {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 100%;
-    height: 100%;
+    > .background {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba($secondary-color, 0.8);
+        width: 100%;
+        height: 100%;
+    }
 }
 
 header {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(217, 217, 217, 0.2);
+    background-color: rgba($default-color, 0.2);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 1rem 2rem;
@@ -35,15 +38,15 @@ header {
     display: flex;
     align-items: center;
     gap: 1rem;
-}
 
-#title-box > svg {
-    width: 2.5rem;
-}
+    > svg {
+        width: 2.5rem;
 
-#title-box > svg > path {
-    fill: #d9d9d9;
-}
+        > path {
+            fill: #d9d9d9;
+        }
+    }
+} 
 
 #search-box {
     margin-top: 1rem;
@@ -52,40 +55,40 @@ header {
     grid-template-columns: 1fr auto;
     align-self: center;
     padding-left: 5rem;
-}
 
-#search-box > .input-container {
-    position: relative;
-}
+    > .input-container {
+        position: relative;
+    }
 
-#search-box svg {
-    position: absolute;
-    top: 0;
-    left: 0.25rem;
-    height: 100%;
-}
+    svg {
+        position: absolute;
+        top: 0;
+        left: 0.25rem;
+        height: 100%;
+    }
 
-#search-box input {
-    padding: 0.5rem 0 0.5rem 3rem;
-    color: rgba(55, 55, 55);
-    background-color: rgb(217, 217, 217);
-    border: none;
-    border-radius: 1rem 0 0 1rem;
-    width: 100%;
-}
+    input {
+        padding: 0.5rem 0 0.5rem 3rem;
+        color: $secondary-color;
+        background-color: $default-color;
+        border: none;
+        border-radius: 1rem 0 0 1rem;
+        width: 100%;
 
-#search-box input:focus {
-    outline: none;
-}
+        &:focus {
+            outline: none;
+        }
+    }
 
-#search-box > button {
-    border: none;
-    background-color: rgba(55, 55, 55);
-    padding: 0 2rem;
-    font-weight: bold;
-    border-radius: 0 1rem 1rem 0;
-    cursor: pointer;
-}
+    > button {
+        border: none;
+        background-color: $secondary-color;
+        padding: 0 2rem;
+        font-weight: bold;
+        border-radius: 0 1rem 1rem 0;
+        cursor: pointer;
+    }    
+} 
 
 #error-box {
     grid-column: span 2;
@@ -104,67 +107,67 @@ header {
         "updt updt";
     grid-template-columns: 1fr 1fr;
     margin-top: 7rem;
-}
 
-#main-information > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    > * {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-#main-information > .location {
-    grid-area: city;
-    margin-bottom: -1rem;
-}
+    > .location {
+        grid-area: city;
+        margin-bottom: -1rem;
+    }
 
-#main-information > .icon {
-    grid-area: icon;
-}
+    > .icon {
+        grid-area: icon;
+    }
 
-#main-information > .temperature {
-    grid-area: temp;
-    font-size: 3rem;
-}
+    > .temperature {
+        grid-area: temp;
+        font-size: 3rem;
+    }
 
-#main-information > .description {
-    grid-area: desc;
-    margin-top: -1rem;
-    font-weight: bold;
-    margin-bottom: 0.2rem;
-}
+    > .description {
+        grid-area: desc;
+        margin-top: -1rem;
+        font-weight: bold;
+        margin-bottom: 0.2rem;
+    }
 
-#main-information > .update-time {
-    grid-area: updt;
+    > .update-time {
+        grid-area: updt;
+    }
 }
 
 #additional-information {
-    background-color: rgba(217, 217, 217, 0.2);
+    background-color: rgba($default-color, 0.2);
     margin: 3rem 1rem;
     padding: 0.5rem 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem 2rem;
-}
 
-#additional-information > div > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+    > div > div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    > div > div > span:first-child {
+        display: flex;
+        align-items: center;
+        margin-right: 1.5rem;
+    }
 
-#additional-information > div > div > span:first-child {
-    display: flex;
-    align-items: center;
-    margin-right: 1.5rem;
-}
+    svg {
+        height: 1rem;
+        margin-right: 0.5rem;
+    }
 
-#additional-information svg {
-    height: 1rem;
-    margin-right: 0.5rem;
-}
-
-#additional-information path {
-    fill: #d9d9d9;
+    path {
+        fill: #d9d9d9;
+    }
 }
 
 #forecast-information {
@@ -179,34 +182,43 @@ header {
     grid-template-areas: "previous   slider   next"
                          "    .     controls    . ";
     grid-template-columns: 2rem calc(100% - 4rem) 2rem;
-}
 
-#forecast-carousel > #next {
-    grid-area: next;
-    border-radius: 0 50% 50% 0;
-}
+    > #next {
+        grid-area: next;
+        border-radius: 0 50% 50% 0;
+    }
 
-#forecast-carousel > #previous {
-    grid-area: previous;
-    border-radius: 50% 0 0 50%;
-}
+    > #previous {
+        grid-area: previous;
+        border-radius: 50% 0 0 50%;
+    }
 
-#forecast-carousel > button {
-   background-color: rgba(217, 217, 217, 0.6);
-   border: none;
-   height: calc(100% - 2rem);
-   align-self: center;
-   cursor: pointer;
-}
+    > button {
+        background-color: rgba($default-color, 0.6);
+        border: none;
+        height: calc(100% - 2rem);
+        align-self: center;
+        cursor: pointer;
 
-#forecast-carousel > button > svg > path{
-    fill: rgba(17, 17, 17, 0.6);
-}
+        > svg > path{
+            fill: rgba($secondary-color, 0.6);
+        }
+    }
 
-#forecast-carousel > #forecast-slider {
-    grid-area: slider;
-    overflow: hidden;
-    padding: 1rem 0;
+    > #forecast-slider {
+        grid-area: slider;
+        overflow: hidden;
+        padding: 1rem 0;
+    }
+
+    > #forecast-controls {
+        grid-area: controls;
+        margin: 1rem 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+    }
 }
 
 #forecast-container {
@@ -223,27 +235,20 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(217, 217, 217, 0.2);
+    background-color: rgba($default-color, 0.2);
     width: calc(15vw - 2rem);
 }
 
-#forecast-carousel > #forecast-controls {
-    grid-area: controls;
-    margin: 1rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-}
-
-#forecast-controls > button {
-    flex-shrink: 0;
-    border: none;
-    border-radius: 1rem;
-    width: 2rem;
-    height: 1rem;
-    background-color: rgba(217, 217, 217, 0.2);
-    cursor: pointer;
+#forecast-controls {
+    > button {
+        flex-shrink: 0;
+        border: none;
+        border-radius: 1rem;
+        width: 2rem;
+        height: 1rem;
+        background-color: rgba($default-color, 0.2);
+        cursor: pointer;
+    }
 }
 
 #background-legend {
@@ -262,35 +267,36 @@ header {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+
+    p, h2 {
+        color: $secondary-color;
+        text-align: center;
+        font-weight: bold;
+        padding: 1rem;
+    }
+
+    > div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    // While I don't learn doing it myself: 
+    // https://www.w3schools.com/howto/howto_css_loader.asp
+    .loader {
+        border: 16px solid #d9d9d9;
+        border-top: 16px solid $secondary-color;
+        border-right: 16px solid $secondary-color;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+    }
+    
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
 }
 
-#loading p, #loading h2 {
-    color: rgb(37, 37, 37);
-    text-align: center;
-    font-weight: bold;
-    padding: 1rem;
-}
-
-#loading > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-/* While I don't learn doing it myself: 
-   https://www.w3schools.com/howto/howto_css_loader.asp */
-.loader {
-    border: 16px solid #d9d9d9;
-    border-top: 16px solid rgb(37, 37, 37);
-    border-right: 16px solid rgb(37, 37, 37);
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-}
-  
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
