--- a/src/style.scss
+++ b/src/style.scss
@@ -12,14 +12,16 @@ $secondary-color: rgb(37, 37, 37);
 main {
     background-size: 100% 100%;
     background-position: center;
+    min-height: 100vh;
+    display: grid; // This will make the content fill screen for big sizes
 
     > .background {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         background-color: rgba($secondary-color, 0.8);
         width: 100%;
-        height: 100%;
     }
 }
 
