--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,6 +23,14 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  min-height: 100dvh;
+
+  > .content {
+    flex: 1;
+  }
 }
 
 // Elements for screen reader only
