feat: add some style for map component

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -2,5 +2,6 @@
 @forward 'weatherMain';
 @forward 'weatherStatus';
 @forward 'weatherForecast';
+@forward 'weatherMap';
 @forward 'footer';
 @forward 'loading';
