--- a/src/styles/components/_weatherMap.scss
+++ b/src/styles/components/_weatherMap.scss
@@ -8,7 +8,8 @@
   }
 
   &__map {
-    aspect-ratio: 3 / 2;
+    height: 500px;
+    max-height: 80vw;
 
     &__legend {
       background-clip: padding-box; // same as leaflet components
