feat: change background image to be fixed on scroll

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -20,6 +20,7 @@ body {
 }
 
 .background {
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
